<resources>
    <string name="ime_name">ASUS Keyboard</string>
    <string name="ime_settings">ASUS keyboard settings</string>
    <string name="about">About</string>
    <string name="version">Version</string>
    <string name="build">Build</string>
    <string name="vibrate_on_keypress">Vibrate on keypress</string>
    <string name="sound_on_keypress">Sound on keypress</string>
    <string name="word_suggestion_category">Word suggestion settings</string>
    <string name="multitap_toggle_tip">Long press to switch between multi-tap and predictive text</string>
    <string name="configuration_category">Preferences</string>
    <string name="configuration_screen_title">Preferences</string>
    <string name="configuration_screen_summary">Change your text input preferences</string>
    <string name="chinese_simplified_category">Simplified Chinese settings</string>
    <string name="auto_cap">Auto-capitalization</string>
    <string name="auto_cap_summary">Automatically capitalize the first letter of a new sentence</string>
    <string name="auto_punctuation">Auto-punctuation</string>
    <string name="auto_punctuation_summary">Press the space key twice at the end of the word to insert a period</string>
    <string name="recapture">Word Reselection</string>
    <string name="recapture_summary">Redisplay the selection list of a previously entered word</string>
    <string name="next_word_prediction">Next Word Prediction</string>
    <string name="next_word_prediction_summary">Predict words based on previously entered text</string>
    <string name="current_use_language">Current language</string>
    <string name="current_use_input_mode">Current input mode</string>
    <string name="language_screen_title">Languages and settings</string>
    <string name="language_screen_summary">Set your text input languages &amp; settings</string>
    <string name="language_category_title">Languages</string>
    <string name="full_keyboard">Keyboard</string>
    <string name="reduced_keyboard">Reduced keyboard</string>
    <string name="phone_keypad">Phone keypad</string>
    <string name="handwriting">Handwriting</string>
    <string name="layouts_title">Layouts</string>
    <string name="keyboard_layouts_summary">Set your text input keyboard</string>
    <string name="keyboard_layouts_dialog_title">Keyboard layouts</string>
    <string name="auto_correction_mode">Auto-correction</string>
    <string name="auto_correction_mode_summary">Automatically correct typing and spelling mistakes</string>
    <string name="auto_correction_mode_dialog_title">Auto-correction</string>
    <string name="auto_correction_off">Off</string>
    <string name="auto_correction_low">Low</string>
    <string name="auto_correction_high">High</string>
    <string name="word_completion_point">Word completion</string>
    <string name="word_completion_point_summary">Set the number of keypresses before word completion is displayed</string>
    <string name="word_completion_point_dialog_title">Word completion</string>
    <string name="word_completion_off">Off</string>
    <string name="word_completion_after_1">After 1 keypress</string>
    <string name="word_completion_after_2">After 2 keypresses</string>
    <string name="word_completion_after_3">After 3 keypresses</string>
    <string name="word_completion_after_4">After 4 keypresses</string>
    <string name="word_completion_after_5">After 5 keypresses</string>
    <string name="word_completion_after_6">After 6 keypresses</string>
    <string name="label_go_key">Go</string>
    <string name="label_next_key">Next</string>
    <string name="label_done_key">Done</string>
    <string name="label_send_key">Send</string>
    <string name="label_symbol_key">\@#_</string>
    <string name="label_symbol_cht_key">1@#</string>
    <string name="label_phone_key">123</string>
    <string name="label_alpha_key">ABC</string>
    <string name="label_alt_key">ALT</string>
    <string name="preferences">Preferences</string>
    <string name="punctuation">Punctuation</string>
    <string name="symbols">Symbols</string>
    <string name="digits">Digits</string>
    <string name="select_input_method">Select Input Method</string>
    <string name="keyboard_input">Keyboard Input</string>
    <string name="keyboard_input_description">Keyboard input layouts &amp; settings</string>
    <string name="handwriting_input">Handwriting Input</string>
    <string name="handwriting_input_description">Handwriting input settings</string>
    <string name="handwriting_input_enable">Enable handwriting input</string>
    <string name="handwriting_input_enable_description">Enter words by writing letters</string>
    <string name="handwriting_input_mix_punctuation_description">Include punctuation in letter recognition mode</string>
    <string name="handwriting_input_mix_symbols_description">Include symbols in letter recognition mode</string>
    <string name="handwriting_input_mix_digits_description">Include digits in letter recognition mode</string>
    <string name="handwriting_chinese_input_mix_punctuation_description">Include punctuation in Chinese recognition mode</string>
    <string name="handwriting_chinese_input_mix_symbols_description">Include symbols in Chinese recognition mode</string>
    <string name="handwriting_chinese_input_mix_digits_description">Include digits in Chinese recognition mode</string>
    <string name="handwriting_chinese_recognize_speed_title">Recognition speed</string>
    <string name="handwriting_chinese_recognize_speed_summary">Set handwriting recognition speed</string>
    <string name="handwriting_chinese_recognize_speed_dialog_title">Recognition speed</string>
    <string name="handwriting_chinese_recognize_speed_accept_dialog_unit">seconds</string>
    <string name="key_input_category">Key input settings</string>
    <string name="trace_input_category">Trace input settings</string>
    <string name="trace_input_tip">Try entering words by dragging your finger from letter to letter.</string>
    <string name="subtype_mode_en_US_keyboard">ASUS English (US) Keyboard</string>
    <string name="subtype_mode_en_UK_keyboard">ASUS English (UK) Keyboard</string>
    <string name="subtype_mode_en_CA_keyboard">ASUS English (Canada) Keyboard</string>
    <string name="subtype_mode_fr_FR_keyboard">ASUS French (France) Keyboard</string>
    <string name="subtype_mode_fr_CH_keyboard">ASUS French (Switzerland) Keyboard</string>
    <string name="subtype_mode_fr_BE_keyboard">ASUS French (Belgium) Keyboard</string>
    <string name="subtype_mode_fr_CA_keyboard">ASUS French (Canada) Keyboard</string>
    <string name="subtype_mode_de_DE_keyboard">ASUS German (Germany) Keyboard</string>
    <string name="subtype_mode_de_CH_keyboard">ASUS German (Switzerland) Keyboard</string>
    <string name="subtype_mode_it_IT_keyboard">ASUS Italian (Italy) Keyboard</string>
    <string name="subtype_mode_it_CH_keyboard">ASUS Italian (Switzerland) Keyboard</string>
    <string name="subtype_mode_bpmf_keyboard">ASUS Bopomofo Keyboard</string>
    <string name="subtype_mode_pinyin_tw_keyboard">ASUS Trad. Pinyin Keyboard</string>
    <string name="subtype_mode_stroke_tw_keyboard">ASUS Trad. Stroke Keyboard</string>
    <string name="subtype_mode_cangjie_tw_keyboard">ASUS Trad. Cangjie Keyboard</string>
    <string name="subtype_mode_quick_cangjie_tw_keyboard">ASUS Trad. Quick Cangjie Keyboard</string>
    <string name="subtype_mode_ru_keyboard">ASUS Russian Keyboard</string>
    <string name="subtype_mode_es_ES_keyboard">ASUS Spanish (Spain) Keyboard</string>
    <string name="subtype_mode_es_US_keyboard">ASUS Spanish (US) Keyboard</string>
    <string name="subtype_mode_nl_NL_keyboard">ASUS Dutch (Holland) Keyboard</string>
    <string name="subtype_mode_nl_BE_keyboard">ASUS Dutch (Belgium) Keyboard</string>
    <string name="subtype_mode_pinyin_cn_keyboard">ASUS Simp. Pinyin Keyboard</string>
    <string name="subtype_mode_stroke_cn_keyboard">ASUS Simp. Stroke Keyboard</string>
    <string name="subtype_mode_trace_cn_keyboard">ASUS Simp. Trace Keyboard</string>
    <string name="subtype_mode_pt_PT_keyboard">ASUS Portuguese (Portugal) Keyboard</string>
    <string name="subtype_mode_pt_BR_keyboard">ASUS Portuguese (Brazil) Keyboard</string>
    <string name="subtype_mode_fi_keyboard">ASUS Finnish Keyboard</string>
    <string name="subtype_mode_sv_keyboard">ASUS Swedish Keyboard</string>
    <string name="subtype_mode_no_keyboard">ASUS Norwegian Keyboard</string>
    <string name="subtype_mode_da_keyboard">ASUS Danish Keyboard</string>
    <string name="subtype_mode_cs_keyboard">ASUS Czech Keyboard</string>
    <string name="subtype_mode_pl_keyboard">ASUS Polish Keyboard</string>
    <string name="subtype_mode_hu_keyboard">ASUS Hungarian Keyboard</string>
    <string name="subtype_mode_sk_keyboard">ASUS Slovakian Keyboard</string>
    <string name="subtype_mode_gl_keyboard">ASUS Greek Keyboard</string>
    <string name="subtype_mode_tr_keyboard">ASUS Turkish Keyboard</string>
    <string name="subtype_mode_thai_keyboard">ASUS Thai Keyboard</string>
    <string name="subtype_mode_arabic_keyboard">ASUS Arabic Keyboard</string>
    <string name="subtype_mode_hebrew_keyboard">ASUS Hebrew Keyboard</string>
    <string name="subtype_mode_ko_keyboard">ASUS Korean Keyboard</string>
    <string name="alternates_for_digit_zero">0ⁿ∅〇</string>
    <string name="alternates_for_digit_one">1¹½⅓¼⅛①</string>
    <string name="alternates_for_digit_two">2²⅔②</string>
    <string name="alternates_for_digit_three">3³¾⅜③</string>
    <string name="alternates_for_digit_four">4④</string>
    <string name="alternates_for_digit_five">5⅝⑤</string>
    <string name="alternates_for_digit_six">6⑥</string>
    <string name="alternates_for_digit_seven">7⅞⑦</string>
    <string name="alternates_for_digit_eight">8⑧</string>
    <string name="alternates_for_digit_nine">9⑨</string>
    <string name="alternates_for_quotation_mark">\"“”＂〃々</string>
    <string name="alternates_for_number_sign">\#＃</string>
    <string name="alternates_for_dollar_sign">$＄¥￥£￡￠</string>
    <string name="alternates_for_percent_sign">%％°℃</string>
    <string name="alternates_for_ampersand">&amp;＆</string>
    <string name="alternates_for_apostrophe">"'’‘`｀＇"</string>
    <string name="alternates_for_left_parenthesis">(（【〖〔{｛</string>
    <string name="alternates_for_right_parenthesis">)）】〗〕}｝</string>
    <string name="alternates_for_asterisk">*＊×※★☆</string>
    <string name="alternates_for_plus_sign">+＋†‡§</string>
    <string name="alternates_for_comma">,，、﹐</string>
    <string name="alternates_for_hyphen_minus">-–—―←→</string>
    <string name="alternates_for_full_stop">.。‧・‥…</string>
    <string name="alternates_for_solidus">/／╱÷</string>
    <string name="alternates_for_colon">:：</string>
    <string name="alternates_for_semicolon">;；</string>
    <string name="alternates_for_less_than_sign">&lt;＜〈《</string>
    <string name="alternates_for_equals_sign">=＝≠≤≥</string>
    <string name="alternates_for_greater_than_sign">>＞〉》</string>
    <string name="alternates_for_commercial_at">\@＠⊙○◎●◯</string>
    <string name="alternates_for_left_square_bracket">[［「『</string>
    <string name="alternates_for_reverse_solidus">\\＼╲</string>
    <string name="alternates_for_right_square_bracket">]］」』</string>
    <string name="alternates_for_circumflex_accent">^＾</string>
    <string name="alternates_for_low_line">_＿</string>
    <string name="alternates_for_vertical_line">|｜∥</string>
    <string name="alternates_for_yen_sign">¥￥</string>
    <string name="alternates_for_ideographic_full_stop">。.‧・‥…</string>
    <string name="alternates_for_left_corner_bracket">「『</string>
    <string name="alternates_for_right_corner_bracket">」』</string>
    <string name="alternates_for_fullwidth_exclamation_mark">！!</string>
    <string name="alternates_for_fullwidth_comma">，,、﹐</string>
    <string name="alternates_for_fullwidth_question_mark">？?</string>
</resources>