<?xml version="1.0" encoding="utf-8"?>
<KeyboardEx xt9:keyWidth="10.000002%p" xt9:keyHeight="@dimen/key_height" xt9:horizontalGap="0.0px" xt9:verticalGap="0.0px"
  xmlns:xt9="http://schemas.android.com/apk/res/com.nuance.xt9.input">
    <Row>
        <Key xt9:popupKeyboard="@xml/kbd_popup_template" xt9:popupCharacters="@string/alternates_for_digit_one" xt9:keyEdgeFlags="left" xt9:keyLabel="1" />
        <Key xt9:popupKeyboard="@xml/kbd_popup_template" xt9:popupCharacters="@string/alternates_for_digit_two" xt9:keyLabel="2" />
        <Key xt9:popupKeyboard="@xml/kbd_popup_template" xt9:popupCharacters="@string/alternates_for_digit_three" xt9:keyLabel="3" />
        <Key xt9:popupKeyboard="@xml/kbd_popup_template" xt9:popupCharacters="@string/alternates_for_digit_four" xt9:keyLabel="4" />
        <Key xt9:popupKeyboard="@xml/kbd_popup_template" xt9:popupCharacters="@string/alternates_for_digit_five" xt9:keyLabel="5" />
        <Key xt9:popupKeyboard="@xml/kbd_popup_template" xt9:popupCharacters="@string/alternates_for_digit_six" xt9:keyLabel="6" />
        <Key xt9:popupKeyboard="@xml/kbd_popup_template" xt9:popupCharacters="@string/alternates_for_digit_seven" xt9:keyLabel="7" />
        <Key xt9:popupKeyboard="@xml/kbd_popup_template" xt9:popupCharacters="@string/alternates_for_digit_eight" xt9:keyLabel="8" />
        <Key xt9:popupKeyboard="@xml/kbd_popup_template" xt9:popupCharacters="@string/alternates_for_digit_nine" xt9:keyLabel="9" />
        <Key xt9:popupKeyboard="@xml/kbd_popup_template" xt9:popupCharacters="@string/alternates_for_digit_zero" xt9:keyEdgeFlags="right" xt9:keyLabel="0" />
    </Row>
    <Row xt9:keyWidth="13.999998%p">
        <Key xt9:keyWidth="14.999998%p" xt9:popupKeyboard="@xml/kbd_popup_template" xt9:popupCharacters="@string/alternates_for_asterisk" xt9:keyEdgeFlags="left" xt9:keyLabel="*" />
        <Key xt9:popupKeyboard="@xml/kbd_popup_template" xt9:popupCharacters="@string/alternates_for_commercial_at" xt9:keyLabel="\@" />
        <Key xt9:popupKeyboard="@xml/kbd_popup_template" xt9:popupCharacters="@string/alternates_for_colon" xt9:keyLabel=":" />
        <Key xt9:popupKeyboard="@xml/kbd_popup_template" xt9:popupCharacters="@string/alternates_for_semicolon" xt9:keyLabel=";" />
        <Key xt9:popupKeyboard="@xml/kbd_popup_template" xt9:popupCharacters="@string/alternates_for_left_parenthesis" xt9:keyLabel="(" />
        <Key xt9:popupKeyboard="@xml/kbd_popup_template" xt9:popupCharacters="@string/alternates_for_right_parenthesis" xt9:keyLabel=")" />
        <Key xt9:keyWidth="14.999998%p" xt9:popupKeyboard="@xml/kbd_popup_template" xt9:popupCharacters="@string/alternates_for_solidus" xt9:keyEdgeFlags="right" xt9:keyLabel="/" />
    </Row>
    <Row xt9:keyWidth="13.999998%p">
        <Key xt9:keyWidth="14.999998%p" xt9:codes="-1" xt9:keyEdgeFlags="left" xt9:isModifier="true" xt9:isSticky="true" xt9:keyLabel="@string/label_alt_key" />
        <Key xt9:popupKeyboard="@xml/kbd_popup_template" xt9:popupCharacters="@string/alternates_for_hyphen_minus" xt9:keyLabel="-" />
        <Key xt9:popupKeyboard="@xml/kbd_popup_template" xt9:popupCharacters="@string/alternates_for_quotation_mark" xt9:keyLabel="&quot;" />
        <Key xt9:keyLabel="~" />
        <Key xt9:popupKeyboard="@xml/kbd_popup_template" xt9:popupCharacters="@string/alternates_for_fullwidth_exclamation_mark" xt9:keyLabel="！" />
        <Key xt9:popupKeyboard="@xml/kbd_popup_template" xt9:popupCharacters="@string/alternates_for_fullwidth_question_mark" xt9:keyLabel="？" />
        <Key xt9:keyWidth="14.999998%p" xt9:codes="-5" xt9:keyEdgeFlags="right" xt9:isRepeatable="true" xt9:iconPreview="@drawable/sym_keyboard_feedback_delete" xt9:keyIcon="@drawable/sym_keyboard_delete" />
    </Row>
    <Row xt9:rowEdgeFlags="bottom">
        <Key xt9:keyWidth="20.000004%p" xt9:codes="-2" xt9:popupKeyboard="@xml/kbd_popup_template" xt9:keyEdgeFlags="left" xt9:keyLabel="@string/label_alpha_key" />
        <Key xt9:keyWidth="14.999998%p" xt9:popupKeyboard="@xml/kbd_popup_template" xt9:popupCharacters="@string/alternates_for_fullwidth_comma" xt9:keyLabel="，" />
        <Key xt9:keyWidth="29.999996%p" xt9:codes="32" xt9:isRepeatable="false" xt9:iconPreview="@drawable/sym_keyboard_feedback_space" xt9:keyIcon="@drawable/sym_keyboard_space" />
        <Key xt9:keyWidth="14.999998%p" xt9:popupKeyboard="@xml/kbd_popup_template" xt9:popupCharacters="@string/alternates_for_ideographic_full_stop" xt9:keyLabel="。" />
        <Key xt9:keyWidth="20.000004%p" xt9:codes="10" xt9:keyEdgeFlags="right" xt9:iconPreview="@drawable/sym_keyboard_feedback_return" xt9:keyIcon="@drawable/sym_keyboard_return" />
    </Row>
</KeyboardEx>
