<?xml version="1.0" encoding="utf-8"?>
<KeyboardEx xt9:keyWidth="22.000004%p" xt9:keyHeight="@dimen/stroke_key_height" xt9:horizontalGap="0.0px" xt9:verticalGap="0.0px" xt9:kdbId="65535"
  xmlns:xt9="http://schemas.android.com/apk/res/com.nuance.xt9.input">
    <Row>
        <Key xt9:keyBackground="@drawable/btn_keyboard_action_key" xt9:keyWidth="14.999998%p" xt9:popupKeyboard="@xml/kbd_popup_template" xt9:popupCharacters="@string/alternates_for_fullwidth_exclamation_mark" xt9:keyEdgeFlags="left" xt9:keyLabel="！" />
        <Key xt9:horizontalGap="1.9999981%p" xt9:codes="1" xt9:iconPreview="@drawable/feedback_stroke1" xt9:keyIcon="@drawable/stroke1" />
        <Key xt9:codes="2" xt9:iconPreview="@drawable/feedback_stroke2" xt9:keyIcon="@drawable/stroke2" />
        <Key xt9:codes="3" xt9:iconPreview="@drawable/feedback_stroke3" xt9:keyIcon="@drawable/stroke3" />
        <Key xt9:keyBackground="@drawable/btn_keyboard_action_key" xt9:keyWidth="14.999998%p" xt9:horizontalGap="1.9999981%p" xt9:keyEdgeFlags="right" xt9:keyLabel="…" />
    </Row>
    <Row>
        <Key xt9:keyBackground="@drawable/btn_keyboard_action_key" xt9:keyWidth="14.999998%p" xt9:popupKeyboard="@xml/kbd_popup_template" xt9:popupCharacters="@string/alternates_for_fullwidth_question_mark" xt9:keyEdgeFlags="left" xt9:keyLabel="？" />
        <Key xt9:horizontalGap="1.9999981%p" xt9:codes="4" xt9:iconPreview="@drawable/feedback_stroke4" xt9:keyIcon="@drawable/stroke4" />
        <Key xt9:codes="5" xt9:iconPreview="@drawable/feedback_stroke5" xt9:keyIcon="@drawable/stroke5" />
        <Key xt9:codes="6" xt9:iconPreview="@drawable/feedback_stroke6" xt9:keyIcon="@drawable/stroke6" />
        <Key xt9:keyBackground="@drawable/btn_keyboard_action_key" xt9:keyWidth="14.999998%p" xt9:horizontalGap="1.9999981%p" xt9:codes="-5" xt9:keyEdgeFlags="right" xt9:isRepeatable="true" xt9:iconPreview="@drawable/sym_keyboard_feedback_delete" xt9:keyIcon="@drawable/sym_keyboard_delete" />
    </Row>
    <Row xt9:keyBackground="@drawable/btn_keyboard_action_key" xt9:keyWidth="20.000004%p" xt9:rowEdgeFlags="bottom" xt9:keyboardMode="@id/mode_normal">
        <Key xt9:codes="-2" xt9:popupKeyboard="@xml/kbd_popup_template" xt9:keyEdgeFlags="left" xt9:keyLabel="@string/label_symbol_key" />
        <Key xt9:keyWidth="14.999998%p" xt9:popupKeyboard="@xml/kbd_popup_template" xt9:popupCharacters="@string/alternates_for_fullwidth_comma" xt9:keyLabel="，" />
        <Key xt9:keyWidth="29.999996%p" xt9:codes="32" xt9:isRepeatable="true" xt9:iconPreview="@drawable/sym_keyboard_feedback_space" xt9:keyIcon="@drawable/sym_keyboard_space" />
        <Key xt9:keyWidth="14.999998%p" xt9:popupKeyboard="@xml/kbd_popup_template" xt9:popupCharacters="@string/alternates_for_ideographic_full_stop" xt9:keyLabel="。" />
        <Key xt9:codes="10" xt9:keyEdgeFlags="right" xt9:iconPreview="@drawable/sym_keyboard_feedback_return" xt9:keyIcon="@drawable/sym_keyboard_return" />
    </Row>
    <Row xt9:keyBackground="@drawable/btn_keyboard_action_key" xt9:keyWidth="20.000004%p" xt9:rowEdgeFlags="bottom" xt9:keyboardMode="@id/mode_im">
        <Key xt9:codes="-2" xt9:popupKeyboard="@xml/kbd_popup_template" xt9:keyEdgeFlags="left" xt9:keyLabel="@string/label_symbol_key" />
        <Key xt9:keyWidth="14.999998%p" xt9:popupKeyboard="@xml/kbd_popup_template" xt9:popupCharacters="@string/alternates_for_fullwidth_comma" xt9:keyLabel="，" />
        <Key xt9:keyWidth="29.999996%p" xt9:codes="32" xt9:isRepeatable="true" xt9:iconPreview="@drawable/sym_keyboard_feedback_space" xt9:keyIcon="@drawable/sym_keyboard_space" />
        <Key xt9:keyWidth="14.999998%p" xt9:popupKeyboard="@xml/kbd_popup_template" xt9:popupCharacters="@string/alternates_for_ideographic_full_stop" xt9:keyLabel="。" />
        <Key xt9:popupKeyboard="@xml/popup_smileys" xt9:keyEdgeFlags="right" xt9:keyOutputText=":-) " xt9:keyLabel=":-)" />
    </Row>
    <HardwareKey xt9:codes="1" xt9:keyCode="8" />
    <HardwareKey xt9:codes="2" xt9:keyCode="9" />
    <HardwareKey xt9:codes="3" xt9:keyCode="10" />
    <HardwareKey xt9:codes="4" xt9:keyCode="11" />
    <HardwareKey xt9:codes="5" xt9:keyCode="12" />
    <HardwareKey xt9:codes="6" xt9:keyCode="13" />
    <HardwareKey xt9:codes="-5" xt9:keyCode="67" />
    <HardwareKey xt9:codes="32" xt9:keyCode="62" />
</KeyboardEx>
